--- a/MetroUIPrueba2/Areas/Gerencia/Views/Insumo/Index.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Insumo/Index.cshtml
@@ -63,7 +63,8 @@
                 <td>Unidad</td>
                 <td>Accesorios</td>
                 <td>
-                    <a href="@Url.Action("Ver","Insumo", new { id = 1 })">Ver</a>
+                    <a href="@Url.Action("Ver","Insumo", new { id = 1 })">Ver/</a>
+                    <a href="@Url.Action("Editar","Insumo", new { id = 1 })">Editar</a>
                 </td>
             </tr>
             <tr>
@@ -72,7 +73,8 @@
                 <td>M2</td>
                 <td>Materia Prima</td>
                 <td>
-                    <a href="@Url.Action("Ver","Insumo", new { id = 1 })">Ver</a>
+                    <a href="@Url.Action("Ver","Insumo", new { id = 1 })">Ver/</a>
+                    <a href="@Url.Action("Editar","Insumo", new { id = 1 })">Editar</a>
                 </td>
             </tr>
             <tr>
@@ -81,7 +83,8 @@
                 <td>Galon</td>
                 <td>Pinturas</td>
                 <td>
-                    <a href="@Url.Action("Ver","Insumo", new { id = 1 })">Ver</a>
+                    <a href="@Url.Action("Ver","Insumo", new { id = 1 })">Ver/</a>
+                    <a href="@Url.Action("Editar","Insumo", new { id = 1 })">Editar</a>
                 </td>
             </tr>
         </tbody>
