--- a/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Index.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Index.cshtml
@@ -70,7 +70,8 @@
                 <td>$ 650.000</td>
                 <td>La descripcion...</td>
                 <td>
-                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver</a>
+                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver/</a>
+                    <a href="@Url.Action("Editar","Producto", new { id = 1 })">Editar</a>
                 </td>
             </tr>
             <tr>
@@ -81,7 +82,8 @@
                 <td>$ 450.000</td>
                 <td>La descripcion2...</td>
                 <td>
-                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver</a>
+                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver/</a>
+                    <a href="@Url.Action("Editar","Producto", new { id = 1 })">Editar</a>
                 </td>
             </tr>
             <tr>
@@ -92,7 +94,8 @@
                 <td>$ 200.000</td>
                 <td>La descripcion3...</td>
                 <td>
-                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver</a>
+                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver/</a>
+                    <a href="@Url.Action("Editar","Producto", new { id = 1 })">Editar</a>
                 </td>
             </tr>
         </tbody>
