--- a/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Nuevo.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Nuevo.cshtml
@@ -21,11 +21,22 @@
         padding: 50px;
         position: relative;
     }
+
+    .user_session {
+        margin-top: 3px;
+        margin-left: 5px;
+        width: 300px;
+        position: relative;
+        color: blue;
+    }
+
+        .user_session h6 {
+            color: blue;
+        }
 </style>
-
-
-
-
+<div class="user_session">
+    <h6>Usuario: Juan Perez</h6>
+</div>
 <div class="container" id="principal">
     <h3>Nuevo Producto</h3>
     <hr />
