--- a/MetroUIPrueba2/Areas/Produccion/Views/Shared/_IntranetLayoutInsumos.cshtml
+++ b/MetroUIPrueba2/Areas/Produccion/Views/Shared/_IntranetLayoutInsumos.cshtml
@@ -42,9 +42,9 @@
                 <div class="mega-container" data-role="dropdown">
                     <ul class="h-menu">
                         <li><a href="@Url.Action("Index","Insumo")"><span class="mif-zoom-in icon"></span> Ver Insumos</a></li>
-                        <li><a href="#">Otro1</a></li>
-                        <li><a href="#">Otro2</a></li>
-                        <li><a href="#">Otro3</a></li>
+                        <li><a href="@Url.Action("Editar","Insumo")">Editar Insumo</a></li>
+                        <li><a href="@Url.Action("Ver","Insumo")">Ver Detalle Insumo</a></li>
+                        <li><a href="@Url.Action("Inventario","Insumo")">Inventario</a></li>
                     </ul>
                 </div>
             </li>
