--- a/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/Nuevo.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/Nuevo.cshtml
@@ -8,13 +8,28 @@
         width: 800px;
         height: 600px;
         top: 50%;
-        margin-top: 55px;
+        margin-top: 20px;
         border: 1px solid green;
         padding-top: 10px;
         padding-left: 60px;
         position: relative;
     }
+
+    .user_session {
+        margin-top: 3px;
+        margin-left: 5px;
+        width: 300px;
+        position: relative;
+        color: blue;
+    }
+
+        .user_session h6 {
+            color: blue;
+        }
 </style>
+<div class="user_session">
+    <h6>Usuario: Juan Perez</h6>
+</div>
 
 
 
