--- a/MetroUIPrueba2/Areas/Gerencia/Views/Insumo/Editar.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Insumo/Editar.cshtml
@@ -15,7 +15,23 @@
         padding-right: 50px;
         position: relative;
     }
+
+    .user_session {
+        margin-top: 3px;
+        margin-left: 5px;
+        width: 300px;
+        position: relative;
+        color: blue;
+    }
+
+        .user_session h6 {
+            color: blue;
+        }
 </style>
+<div class="user_session">
+    <h6>Usuario: Juan Perez</h6>
+</div>
+
 
 
 
