--- a/MetroUIPrueba2/Areas/Gerencia/Views/Insumo/Inventario.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Insumo/Inventario.cshtml
@@ -15,13 +15,30 @@
         width: 900px;
         height: auto;
         top: 50%;
-        margin-top: 60px;
+        margin-top: 20px;
         border: 1px solid green;
         padding: 50px;
         position: relative;
     }
-</style>
 
+    .user_session {
+        margin-top: 3px;
+        margin-left: 5px;
+        width: 300px;
+        position: relative;
+        color: blue;
+    }
+
+    .div-img {
+        margin-top: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+</style>
+<div class="user_session">
+    <h6>Usuario: Juan Perez</h6>
+</div>
 
 
 
