--- a/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Editar.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Editar.cshtml
@@ -16,12 +16,27 @@
         width: 900px;
         height: auto;
         top: 50%;
-        margin-top: 60px;
+        margin-top: 20px;
         border: 1px solid green;
         padding: 50px;
         position: relative;
     }
+
+    .user_session {
+        margin-top: 3px;
+        margin-left: 5px;
+        width: 300px;
+        position: relative;
+        color: blue;
+    }
+
+        .user_session h6 {
+            color: blue;
+        }
 </style>
+<div class="user_session">
+    <h6>Usuario: Juan Perez</h6>
+</div>
 
 
 
