--- a/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Ver.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Ver.cshtml
@@ -14,7 +14,22 @@
         padding: 50px;
         position: relative;
     }
+
+    .user_session {
+        margin-top: 3px;
+        margin-left: 5px;
+        width: 300px;
+        position: relative;
+        color: blue;
+    }
+
+        .user_session h6 {
+            color: blue;
+        }
 </style>
+<div class="user_session">
+    <h6>Usuario: Juan Perez</h6>
+</div>
 
 <br />
 <div class="container" id="principal">
