--- a/MetroUIPrueba2/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml
@@ -32,9 +32,7 @@
                 <div class="mega-container" data-role="dropdown">
                     <ul class="h-menu">
                         <li><a href="@Url.Action("Index","Producto")"><span class="mif-zoom-in icon"></span> Ver Productos</a></li>
-                        <li><a href="#">Otro1</a></li>
-                        <li><a href="#">Otro2</a></li>
-                        <li><a href="#">Otro3</a></li>
+                        <li><a href="@Url.Action("Inventario","Producto")"><span class="mif-database"></span>Inventario</a></li>
                     </ul>
                 </div>
             </li>
@@ -43,20 +41,15 @@
                 <div class="mega-container" data-role="dropdown">
                     <ul class="h-menu">
                         <li><a href="@Url.Action("Index","Insumo")"><span class="mif-zoom-in icon"></span> Ver Insumos</a></li>
-                        <li><a href="#">Otro1</a></li>
-                        <li><a href="#">Otro2</a></li>
-                        <li><a href="#">Otro3</a></li>
+                        <li><a href="@Url.Action("Inventario","Insumo")"><span class="mif-database"></span>Inventario</a></li>
                     </ul>
                 </div>
-            </li>
+            </li<span class="mif-database"></span>
             <li>
                 <a href="#" class="dropdown-toggle"><span class="mif-shop icon"></span> Proveedores</a>
                 <div class="mega-container" data-role="dropdown">
                     <ul class="h-menu">
                         <li><a href="@Url.Action("Index","Proveedor")"><span class="mif-zoom-in icon"></span> Ver Proveedores</a></li>
-                        <li><a href="#">Otro1</a></li>
-                        <li><a href="#">Otro2</a></li>
-                        <li><a href="#">Otro3</a></li>
                     </ul>
                 </div>
             </li>
@@ -65,9 +58,6 @@
                 <div class="mega-container" data-role="dropdown">
                     <ul class="h-menu">
                         <li><a href="@Url.Action("Index","Empleado")"><span class="mif-zoom-in icon"></span> Ver Empleados</a></li>
-                        <li><a href="#">Otro1</a></li>
-                        <li><a href="#">Otro2</a></li>
-                        <li><a href="#">Otro3</a></li>
                     </ul>
                 </div>
             </li>
