--- a/MetroUIPrueba2/Views/User/Login.cshtml
+++ b/MetroUIPrueba2/Views/User/Login.cshtml
@@ -23,6 +23,11 @@
             <button class="button default outline">Ingresar</button>
             <input type="button" class="button default outline" value="Atras">
         </div>
+        <div class="form-group">
+            <a href="/User/Nuevo" class="button default outline">Nuevo</a>
+            <input type="button" class="button default outline" value="Atras">
+        </div>
+
     </form>
 </div>
 
