--- a/MetroUIPrueba2/Views/Home/Intranet.cshtml
+++ b/MetroUIPrueba2/Views/Home/Intranet.cshtml
@@ -1,7 +1,6 @@
-﻿
-@{
-    ViewBag.Title = "Intranet";
-    Layout = "~/Views/Shared/_IntranetLayout.cshtml";
+﻿@{
+    ViewBag.Title = "Index";
+    Layout = "~/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml";
 }
 
 <h2>Bienvenido a la Intranet</h2>
