--- a/MetroUIPrueba2/Views/Producto/Nuevo.cshtml
+++ b/MetroUIPrueba2/Views/Producto/Nuevo.cshtml
@@ -71,9 +71,8 @@
                 <td>
                     <select style="width:400px;" name="Id" data-role="select" class="input-lg">
                         <option value="">seleccione</option>
-                        @foreach (var Usuario in ViewBag.Usuario)
-                        {
-                        <option value="@Usuario.Id">@Usuario.NombreUsuario</option>
+                        <option value="Usr-1"></option>
+                        <option value="Usr-2"></option>
                         }
                     </select>
                 </td>
